<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>fi.microserver</groupId>
	<artifactId>MicroServer</artifactId>
	<version>0.0.5</version>
	<build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>2.10</version>
				<executions>
					<execution>
						<id>copy-dependencies</id>
						<phase>package</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<includeScope>runtime</includeScope>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>2.4</version>
				<configuration>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<mainClass>fi.microserver.DWO</mainClass>
						</manifest>
					</archive>
				</configuration>
			</plugin>
	</plugins>
	</build>
	<dependencies>
		<dependency>
			<groupId>fi.dwo</groupId>
			<artifactId>ch.jm.osgi.provisioning</artifactId>
			<version>0.9.0</version>
		</dependency>
		<dependency>
			<groupId>org.osgi</groupId>
			<artifactId>org.osgi.service.cm</artifactId>
			<version>1.5.0</version>
		</dependency>
		<dependency>
			<groupId>biz.aQute.bnd</groupId>
			<artifactId>bndlib</artifactId>
			<version>2.4.0</version>
			<exclusions>
				<exclusion>
					<artifactId>org.osgi.core</artifactId>
					<groupId>org.osgi</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.apache.felix</groupId>
			<artifactId>org.apache.felix.framework</artifactId>
			<version>5.6.10</version>
		</dependency>
<!-- <dependency> --> <!-- werkt niet, ondersteund geen optional start -->
<!--     <groupId>org.eclipse.platform</groupId> -->
<!--     <artifactId>org.eclipse.osgi</artifactId> -->
<!--     <version>3.13.100</version> -->
<!-- </dependency> -->


		<dependency>
			<groupId>org.osgi</groupId>
			<artifactId>org.osgi.service.log</artifactId>
			<version>1.3.0</version>
		</dependency>
		<dependency>
			<groupId>org.osgi</groupId>
			<artifactId>org.osgi.service.event</artifactId>
			<version>1.3.1</version>
		</dependency>

	</dependencies>
	<properties>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<fi.dwo.boot>http://cdn.dwo.nl/bundles/BootLoader-2.0.jar</fi.dwo.boot>
	</properties>
	<parent>
		<groupId>nl.uu.fi.dwo</groupId>
		<artifactId>DWO.master.pom</artifactId>
		<version>1.1</version>
	</parent>
	<profiles>
		<profile>
			<id>mac</id>
			<activation><os><family>mac</family></os></activation>
			<build>
				<plugins>
	<plugin>
		<groupId>org.apache.maven.plugins</groupId>
		<artifactId>maven-antrun-plugin</artifactId>
		<version>1.8</version>
		<executions>
			<execution>
				<phase>verify</phase>
				<configuration>
					<target
						xmlns:fx="javafx:com.sun.javafx.tools.ant">
						<echo message="JAVA_HOME = ${java.home}" />
						<taskdef resource="com/sun/javafx/tools/ant/antlib.xml"
							uri="javafx:com.sun.javafx.tools.ant"
							classpath="${java.home}/../lib/ant-javafx.jar" />
						<fx:application id="fi.microserver"
							name="DWO-docent" 
							mainClass="fi.microserver.DWO" 
							version="${project.version}" 
							toolkit="swing" />
						<fx:resources id="appRes">
						    <fx:fileset dir="target/dependency" includes="*.jar"/>
						    <fx:fileset dir="target" includes='${project.build.finalName}.jar' />
						</fx:resources>
						<fx:deploy width="800" height="600"
					        outdir="target/deploy" embedJNLP="true"
					        outfile="DWO-docent"
							nativeBundles='dmg'
							signBundle='false'
						>
							<fx:platform j2se="8.0" >
								<fx:jvmarg value="-Xmx1024m" />
							</fx:platform>
					        <fx:application refId="fi.microserver"/>					 
					        <fx:resources refid="appRes"/>						 
					        <fx:info 
					        	title="DWO-docent"
					          	vendor="Numworx"
					          	description="Start the DWO"
					         >
						         <fx:association extension='dwo' mimetype="application/x-numworx-dwo-configuration" />
						         <fx:icon href='package/macosx/DWO-docent.icns' />
					         </fx:info>
<!-- 					         <fx:bundleArgument arg='icon' value='package/macosx/DWO-docent-volume.icns' /> -->
					      </fx:deploy>
					</target>
				</configuration>
				<goals>
					<goal>run</goal>
				</goals>
			</execution>
		</executions>
	</plugin>
   <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>build-helper-maven-plugin</artifactId>
        <version>3.0.0</version>
        <executions>
          <execution>
            <id>attach-artifacts</id>
            <phase>package</phase>
            <goals>
              <goal>attach-artifact</goal>
            </goals>
            <configuration>
              <artifacts>
                <artifact>
                  <file>target/deploy/bundles/DWO-docent-${project.version}.dmg</file>
                  <type>dmg</type>
                  <classifier>installer</classifier>
                </artifact>
              </artifacts>
            </configuration>
          </execution>
        </executions>
      </plugin>	
     </plugins>
			</build>
		</profile>
		<profile>
			<id>linux</id>
			<activation><os><family>unix</family><name>Linux</name></os></activation>
		</profile>	
		<profile>
			<id>windows</id>
			<activation><os><family>windows</family></os></activation>
			<build>
				<plugins>
	<plugin>
		<groupId>org.apache.maven.plugins</groupId>
		<artifactId>maven-antrun-plugin</artifactId>
		<version>1.8</version>
		<dependencies>
			<dependency>
				<groupId>javafx</groupId>
				<artifactId>ant-javafx.jar</artifactId>
				<version>9.0.4</version>
				<systemPath>${java.home}/lib/ant-javafx.jar</systemPath>
				<scope>system</scope>
			</dependency>
		</dependencies>
		<executions>
			<execution>
				<phase>verify</phase>
				<configuration>
					<target
						xmlns:fx="javafx:com.sun.javafx.tools.ant">
						<echo message="JAVA_HOME = ${java.home}" />
						<taskdef resource="com/sun/javafx/tools/ant/antlib.xml"
							uri="javafx:com.sun.javafx.tools.ant"
						/>
						<fx:application id="fi.microserver"
							name="DWO-docent" 
							mainClass="fi.microserver.DWO" 
							version="${project.version}" 
							toolkit="swing" />
						<fx:resources id="appRes">
						    <fx:fileset dir="target/dependency" includes="*.jar"/>
						    <fx:fileset dir="target" includes='${project.build.finalName}.jar' />
						</fx:resources>
						<fx:deploy width="800" height="600"
					        outdir="target/deploy" embedJNLP="true"
					        outfile="DWO-docent"
							nativeBundles='exe'
							signBundle='false'
						>
							<fx:platform j2se="9.0" >
								<fx:jvmarg value="-Xmx1024m --add-exports=java.desktop/sun.awt.www.content.image=ALL-UNNAMED --add-modules java.activation,java.desktop" />
							</fx:platform>
					        <fx:application refId="fi.microserver"/>					 
					        <fx:resources refid="appRes"/>						 
					        <fx:info 
					        	title="DWO-docent"
					          	vendor="Numworx"
					          	description="Start the DWO"
					         >
						         <fx:association extension='dwo' mimetype="application/x-numworx-dwo-configuration"/>
						         <fx:icon href='package/windows/DWO-docent.ico' />
					         </fx:info>
<!-- 					         <fx:bundleArgument arg='icon' value='package/macosx/DWO-docent-volume.icns' /> -->
					      </fx:deploy>
					</target>
				</configuration>
				<goals>
					<goal>run</goal>
				</goals>
			</execution>
		</executions>
	</plugin>
   <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>build-helper-maven-plugin</artifactId>
        <version>3.0.0</version>
        <executions>
          <execution>
            <id>attach-artifacts</id>
            <phase>verify</phase>
            <goals>
              <goal>attach-artifact</goal>
            </goals>
            <configuration>
              <artifacts>
                <artifact>
                  <file>target/deploy/DWO-docent-${project.version}.exe</file>
                  <type>exe</type>
                  <classifier>installer</classifier>
                </artifact>
              </artifacts>
            </configuration>
          </execution>
        </executions>
      </plugin>	
     </plugins>
			</build>
		
		</profile>
	
		<profile>
			<id>assemble</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-assembly-plugin</artifactId>
						<configuration>
							<archive>
								<manifest>
									<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
									<addClasspath>false</addClasspath>
									<mainClass>fi.microserver.DWO</mainClass>
								</manifest>
							</archive>
							<descriptorRefs>
								<descriptorRef>jar-with-dependencies</descriptorRef>
							</descriptorRefs>
						</configuration>
						<executions>
							<execution>
								<phase>package</phase>
								<goals>
									<goal>single</goal>
								</goals>
							</execution>
						</executions>
					</plugin>


				</plugins>
			</build>

		</profile>

	</profiles>
</project>
